kubernetes/apps/portfolio-ju/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ju
spec:
  selector:
    app: portfolio-ju
  ports:
    - port: 80
      targetPort: 80
