kubernetes/apps/portfolio-ju/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ju
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - portfolio-ju.gabriel0day.cloud
      secretName: portfolio-ju-tls
  rules:
    - host: portfolio-ju.gabriel0day.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-ju
                port:
                  number: 80
